--- a/findGP.html
+++ b/findGP.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Start Page</title>
-	<meta charset="utf-8">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<title>Find a GP</title>
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:700" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
@@ -11,13 +10,17 @@
   crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha256-KXn5puMvxCw+dAYznun+drMdG1IFl3agK0p/pqT9KAo= sha512-2e8qq0ETcfWRI4HJBzQiA3UoyFk6tbNyG+qSaIBZLyW9Xf3sWZHN/lxe9fTh1U45DpPf07yj94KsUHHWe4Yk1A==" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.16/d3.min.js"></script>
+  <meta name="viewport" content="width=device-width">
 </head>
 <body>
-	<div class="start-page">
-		<h4>I am worried about...</h4>
-		<a href="./index.html"><button id="myself" class="start-button button">MYSELF</button></a>
-		<a href="./someone-else.html"><button id="someone" class="start-button button">SOMEONE ELSE</button></a>
+	<div class="enterPostcode">
+		<input type="text" class="postCodeInput" id="postCodeInput" placeholder="Your Postcode"></input>
+		<button id="submitPostcode" class="submitPostcode">SUBMIT</button>
 	</div>
+	<div id="map" class="map"></div>
+	<div id="GP"></div>
+<script type="text/javascript" src="mapAndMarkers.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAYeIGEqmupt28O-4eif9tsEX9lBYq7Hiw&callback=initMap"
+    async defer></script>
 </body>
 </html>
