--- a/helpMethods.html
+++ b/helpMethods.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Start Page</title>
+	<title>Help Methods</title>
 	<meta charset="utf-8">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:700" rel="stylesheet" type="text/css">
@@ -11,13 +11,21 @@
   crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha256-KXn5puMvxCw+dAYznun+drMdG1IFl3agK0p/pqT9KAo= sha512-2e8qq0ETcfWRI4HJBzQiA3UoyFk6tbNyG+qSaIBZLyW9Xf3sWZHN/lxe9fTh1U45DpPf07yj94KsUHHWe4Yk1A==" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.16/d3.min.js"></script>
 </head>
 <body>
-	<div class="start-page">
-		<h4>I am worried about...</h4>
-		<a href="./index.html"><button id="myself" class="start-button button">MYSELF</button></a>
-		<a href="./someone-else.html"><button id="someone" class="start-button button">SOMEONE ELSE</button></a>
+	<div class="help-container">
+		<a href="./school"><div class="method method1">
+			<h4>SCHOOL</h4>
+		</div></a>
+		<a href="./work"><div class="method method2">
+			<h4>WORK</h4>
+		</div></a>
+		<a href="./findGP.html"><div class="method method3">
+			<h4>GP</h4><
+		</div></a>
+		<a href="./support-group"><div class="method method4">
+			<h4>SUPPORT GROUPS</h4>
+		</div></a>
 	</div>
 </body>
 </html>
