--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div id="all-questions" class="all-questions col-md-10 col-md-offset-1">
               <!-- <h2 class="questions-heading"> <i class="material-icons heading-icon">comment</i> Assessment Questionnaire</h2> -->
               <div id="section-one" class="section">
-                <div class="question">
+                <div class="question q1">
                   <h4>1. Personal Appearance</h4>
                   <h5>
                 Are they able to identify at least three features of their personal appearance e.g. colour hair, colour eyes, height, clothing?
@@ -54,7 +54,7 @@
                     <button class="button btn btn-primary submit col-md-offset-9 col-md-2" type="button">NEXT</button>
                   </div>
                 </div>
-                <div class="question">
+                <div class="question q2 hidden">
                   <h4>2. Appearance of Others</h4>
                   <h5>
                 Are they able to identify at least three features of others’ personal appearance e.g. colour hair, colour eyes, height, clothing?
@@ -81,7 +81,7 @@
                     <button class="button btn btn-primary submit col-md-offset-9 col-md-2" type="button">NEXT</button>
                   </div>
                 </div>
-                <div class="question">
+                <div class="question q3 hidden">
                   <h4>3. Likes</h4>
                   <h5>
                 Can they identify at least three things that they like?
@@ -108,7 +108,7 @@
                     <button class="button btn btn-primary submit col-md-offset-9 col-md-2" type="button">NEXT</button>
                   </div>
                 </div>
-                <div class="question">
+                <div class="question q4 hidden">
                   <h4>4. Dislikes</h4>
                   <h5>
                 Can they identify at least three things that they dislike?
@@ -135,7 +135,7 @@
                     <button class="button btn btn-primary submit col-md-offset-9 col-md-2" type="button">NEXT</button>
                   </div>
                 </div>
-                <div class="question">
+                <div class="question q5 hidden">
                   <h4>5. Strengths</h4>
                   <h5>
                 Can they identify something that they feel they are good at?
@@ -163,9 +163,9 @@
                   </div>
                 </div>
               </div>
-          <div class="row">
+          <!-- <div class="row hidden">
             <button class="button btn btn-primary submit col-md-offset-9 col-md-2" type="button">Submit</button>
-          </div>
+          </div> -->
         </div>
       </div>
     </form>
@@ -176,8 +176,8 @@
   </div>
 
   <script type="text/javascript" src="script.js"></script>
-  <script type="text/javascript" src="collapse.js"></script>
-  <script type="text/javascript" src="wheel.js"></script>
+  <!-- <script type="text/javascript" src="collapse.js"></script>
+  <script type="text/javascript" src="wheel.js"></script> -->
 </body>
 
 </html>
