another page for 'someone else' option

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     </label>
                   </div>
                   <div class="buttonDiv">
-                    <button class="button btn btn-primary submit col-md-offset-9 col-md-2" type="button">NEXT</button>
+                    <button class="button btn  submit col-md-offset-9 col-md-2" type="button">NEXT</button>
                   </div>
                 </div>
                 <div class="question q2 hidden">
@@ -78,7 +78,7 @@
                     </label>
                   </div>
                   <div class="buttonDiv">
-                    <button class="button btn btn-primary submit col-md-offset-9 col-md-2" type="button">NEXT</button>
+                    <button class="button btn  submit col-md-offset-9 col-md-2" type="button">NEXT</button>
                   </div>
                 </div>
                 <div class="question q3 hidden">
@@ -105,7 +105,7 @@
                     </label>
                   </div>
                   <div class="buttonDiv">
-                    <button class="button btn btn-primary submit col-md-offset-9 col-md-2" type="button">NEXT</button>
+                    <button class="button btn  submit col-md-offset-9 col-md-2" type="button">NEXT</button>
                   </div>
                 </div>
                 <div class="question q4 hidden">
@@ -132,7 +132,7 @@
                     </label>
                   </div>
                   <div class="buttonDiv">
-                    <button class="button btn btn-primary submit col-md-offset-9 col-md-2" type="button">NEXT</button>
+                    <button class="button btn  submit col-md-offset-9 col-md-2" type="button">NEXT</button>
                   </div>
                 </div>
                 <div class="question q5 hidden">
@@ -159,12 +159,12 @@
                     </label>
                   </div>
                   <div class="buttonDiv">
-                    <button class="button btn btn-primary submit col-md-offset-9 col-md-2" type="button">SUBMIT</button>
+                    <button class="button btn  submit col-md-offset-9 col-md-2" type="button">SUBMIT</button>
                   </div>
                 </div>
               </div>
           <!-- <div class="row hidden">
-            <button class="button btn btn-primary submit col-md-offset-9 col-md-2" type="button">Submit</button>
+            <button class="button btn  submit col-md-offset-9 col-md-2" type="button">Submit</button>
           </div> -->
         </div>
       </div>
