more final page styling

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
               <!-- <h2 class="questions-heading"> <i class="material-icons heading-icon">comment</i> Assessment Questionnaire</h2> -->
               <div id="section-one" class="section">
                 <div class="question q1">
-                  <h4>1. Personal Appearance</h4>
+                  <h4>1. Depression</h4>
                   <h5>
-                Are they able to identify at least three features of their personal appearance e.g. colour hair, colour eyes, height, clothing?
+                How are you feeling?
               </h5>
                   <div class="answers">
                     <label>
@@ -55,9 +55,9 @@
                   </div>
                 </div>
                 <div class="question q2 hidden">
-                  <h4>2. Appearance of Others</h4>
+                  <h4>2. Addiction</h4>
                   <h5>
-                Are they able to identify at least three features of others’ personal appearance e.g. colour hair, colour eyes, height, clothing?
+                If you have an addiction, how are you coping?
               </h5>
                   <div class="answers">
                     <label>
