--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
                   </div>
                 </div>
                 <div class="question q3 hidden">
-                  <h4>3. Likes</h4>
+                  <h4>3. Conflict-Zone</h4>
                   <h5>
-                Can they identify at least three things that they like?
-              </h5>
+                      If you come from a conflict-zone? How are you coping?
+                  </h5>
                   <div class="answers">
                     <label>
                       <input type="radio" name="likes" value="3" class="always" />
