--- a/someone-else.html
+++ b/someone-else.html
@@ -1,174 +1,143 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>someoneElse</title>
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans:700" rel="stylesheet" type="text/css">
-        <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" type="text/css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha256-7s5uDGW3AHqw6xtJmNNtr+OBRJUlgkNJEo78P4b0yRw= sha512-nNo+yCHEyn0smMxSswnf/OnX6/KwJuZTlNZBjauKhTK0c+zT+q5JOCx0UFhXQ6rJR9jg6Es8gPuD2uZcYDLqSw=="
-        crossorigin="anonymous">
-        <link rel="stylesheet" href="style.css">
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha256-KXn5puMvxCw+dAYznun+drMdG1IFl3agK0p/pqT9KAo= sha512-2e8qq0ETcfWRI4HJBzQiA3UoyFk6tbNyG+qSaIBZLyW9Xf3sWZHN/lxe9fTh1U45DpPf07yj94KsUHHWe4Yk1A==" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.16/d3.min.js"></script>    </head>
-    <body>
-        <div id="whole-form" class="whole-form">
-          <form id="ta-form">
-            <div class="all-inputs">
-              <div class="container-fluid">
-                <div class="row">
-                  <div id="all-questions" class="all-questions col-md-10 col-md-offset-1">
-                    <!-- <h2 class="questions-heading"> <i class="material-icons heading-icon">comment</i> Assessment Questionnaire</h2> -->
-                    <div id="section-one" class="section">
-                      <div class="question q1">
-                        <h4>1. Personal Appearance</h4>
-                        <h5>
-                      Are they able to identify at least three features of their personal appearance e.g. colour hair, colour eyes, height, clothing?
-                    </h5>
-                        <div class="answers">
-                          <label>
-                            <input type="radio" name="personal-appearance" value="3" class="always" required />
-                            <img src="./assets/face-always.svg" />
-                          </label>
-                          <label>
-                            <input type="radio" name="personal-appearance" value="2" class="sometimes" />
-                            <img src="./assets/face-sometimes.svg" />
-                          </label>
-                          <label>
-                            <input type="radio" name="personal-appearance" value="1" class="rarely" />
-                            <img src="./assets/face-rarely.svg" />
-                          </label>
-                          <label>
-                            <input type="radio" name="personal-appearance" value="0" class="never" />
-                            <img src="./assets/face-never.svg" />
-                          </label>
-                        </div>
-                        <div class="buttonDiv">
-                          <button class="button btn  submit col-md-offset-9 col-md-2" type="button">NEXT</button>
-                        </div>
-                      </div>
-                      <div class="question q2 hidden">
-                        <h4>2. Appearance of Others</h4>
-                        <h5>
-                      Are they able to identify at least three features of others’ personal appearance e.g. colour hair, colour eyes, height, clothing?
-                    </h5>
-                        <div class="answers">
-                          <label>
-                            <input type="radio" name="appearance-others" value="3" class="always" required/>
-                            <img src="./assets/face-always.svg" />
-                          </label>
-                          <label>
-                            <input type="radio" name="appearance-others" value="2" class="sometimes" />
-                            <img src="./assets/face-sometimes.svg" />
-                          </label>
-                          <label>
-                            <input type="radio" name="appearance-others" value="1" class="rarely" />
-                            <img src="./assets/face-rarely.svg" />
-                          </label>
-                          <label>
-                            <input type="radio" name="appearance-others" value="0" class="never" />
-                            <img src="./assets/face-never.svg" />
-                          </label>
-                        </div>
-                        <div class="buttonDiv">
-                          <button class="button btn  submit col-md-offset-9 col-md-2" type="button">NEXT</button>
-                        </div>
-                      </div>
-                      <div class="question q3 hidden">
-                        <h4>3. Likes</h4>
-                        <h5>
-                      Can they identify at least three things that they like?
-                    </h5>
-                        <div class="answers">
-                          <label>
-                            <input type="radio" name="likes" value="3" class="always" />
-                            <img src="./assets/face-always.svg" />
-                          </label>
-                          <label>
-                            <input type="radio" name="likes" value="2" class="sometimes" />
-                            <img src="./assets/face-sometimes.svg" />
-                          </label>
-                          <label>
-                            <input type="radio" name="likes" value="1" class="rarely" />
-                            <img src="./assets/face-rarely.svg" />
-                          </label>
-                          <label>
-                            <input type="radio" name="likes" value="0" class="never" />
-                            <img src="./assets/face-never.svg" />
-                          </label>
-                        </div>
-                        <div class="buttonDiv">
-                          <button class="button btn  submit col-md-offset-9 col-md-2" type="button">NEXT</button>
-                        </div>
-                      </div>
-                      <div class="question q4 hidden">
-                        <h4>4. Dislikes</h4>
-                        <h5>
-                      Can they identify at least three things that they dislike?
-                    </h5>
-                        <div class="answers">
-                          <label>
-                            <input type="radio" name="dislikes" value="3" class="always" />
-                            <img src="./assets/face-always.svg" />
-                          </label>
-                          <label>
-                            <input type="radio" name="dislikes" value="2" class="sometimes" />
-                            <img src="./assets/face-sometimes.svg" />
-                          </label>
-                          <label>
-                            <input type="radio" name="dislikes" value="1" class="rarely" />
-                            <img src="./assets/face-rarely.svg" />
-                          </label>
-                          <label>
-                            <input type="radio" name="dislikes" value="0" class="never" />
-                            <img src="./assets/face-never.svg" />
-                          </label>
-                        </div>
-                        <div class="buttonDiv">
-                          <button class="button btn  submit col-md-offset-9 col-md-2" type="button">NEXT</button>
-                        </div>
-                      </div>
-                      <div class="question q5 hidden">
-                        <h4>5. Strengths</h4>
-                        <h5>
-                      Can they identify something that they feel they are good at?
-                    </h5>
-                        <div class="answers">
-                          <label>
-                            <input type="radio" name="strengths" value="3" class="always" />
-                            <img src="./assets/face-always.svg" />
-                          </label>
-                          <label>
-                            <input type="radio" name="strengths" value="2" class="sometimes" />
-                            <img src="./assets/face-sometimes.svg" />
-                          </label>
-                          <label>
-                            <input type="radio" name="strengths" value="1" class="rarely" />
-                            <img src="./assets/face-rarely.svg" />
-                          </label>
-                          <label>
-                            <input type="radio" name="strengths" value="0" class="never" />
-                            <img src="./assets/face-never.svg" />
-                          </label>
-                        </div>
-                        <div class="buttonDiv">
-                          <button class="button btn  submit col-md-offset-9 col-md-2" type="button">SUBMIT</button>
-                        </div>
-                      </div>
-                    </div>
-                <!-- <div class="row hidden">
-                  <button class="button btn  submit col-md-offset-9 col-md-2" type="button">Submit</button>
-                </div> -->
+
+<head>
+  <meta charset="utf-8">
+  <title>Mind Checker</title>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:700" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" type="text/css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha256-7s5uDGW3AHqw6xtJmNNtr+OBRJUlgkNJEo78P4b0yRw= sha512-nNo+yCHEyn0smMxSswnf/OnX6/KwJuZTlNZBjauKhTK0c+zT+q5JOCx0UFhXQ6rJR9jg6Es8gPuD2uZcYDLqSw=="
+  crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha256-KXn5puMvxCw+dAYznun+drMdG1IFl3agK0p/pqT9KAo= sha512-2e8qq0ETcfWRI4HJBzQiA3UoyFk6tbNyG+qSaIBZLyW9Xf3sWZHN/lxe9fTh1U45DpPf07yj94KsUHHWe4Yk1A==" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.16/d3.min.js"></script>
+</head>
+
+<body>
+ <!--  <header>
+    <a href="http://inclusiveclassrooms.co.uk"><img class="home-link" src="./assets/#" alt="inclusive classrooms" /></a>
+  </header> -->
+  <div id="whole-form" class="whole-form">
+    <form id="ta-form">
+      <div class="all-inputs">
+        <div class="container-fluid">
+          <div class="row">
+            <div id="all-questions" class="all-questions col-md-10 col-md-offset-1">
+              <!-- <h2 class="questions-heading"> <i class="material-icons heading-icon">comment</i> Assessment Questionnaire</h2> -->
+              <div id="section-one" class="section">
+                <div class="question q1">
+                  <h4>1. Depression</h4>
+                  <h5>
+                      Does he/she feel down? Depressed? or Hopeless?
+                  </h5>
+                  <div class="answers">
+                    <label>
+                      <input type="radio" name="depression" value="problem" class="always" required />
+                      <img src="./assets/tick.png" />
+                    </label>
+                    <label>
+                      <input type="radio" name="depression" value="fine" class="sometimes" />
+                      <img src="./assets/cross.png" />
+                    </label>
+                  </div>
+                  <div class="buttonDiv">
+                    <button class="button btn  submit col-md-offset-9 col-md-2" type="button">NEXT</button>
+                  </div>
+                </div>
+                <div class="question q2 hidden">
+                  <h4>2. Addiction</h4>
+                  <h5>
+                    Does he/she struggle with addiction?
+                  </h5>
+              <div class="answers">
+                <label>
+                  <input type="radio" name="addiction" value="problem" class="always" required />
+                  <img src="./assets/tick.png" />
+                </label>
+                <label>
+                  <input type="radio" name="addiction" value="fine" class="sometimes" />
+                  <img src="./assets/cross.png" />
+                </label>
               </div>
-            </div>
-          </form>
+                  <div class="buttonDiv">
+                    <button class="button btn  submit col-md-offset-9 col-md-2" type="button">NEXT</button>
+                  </div>
+                </div>
+                <div class="question q3 hidden">
+                  <h4>3. Conflict-zone</h4>
+                  <h5>
+                Does he/she come from a conflict zone?
+              </h5>
+              <div class="answers">
+                <label>
+                  <input type="radio" name="conflict-zone" value="may be problem" class="always" required />
+                  <img src="./assets/tick.png" />
+                </label>
+                <label>
+                  <input type="radio" name="conflict-zone" value="not relevant" class="sometimes" />
+                  <img src="./assets/cross.png" />
+                </label>
+              </div>
+                  <div class="buttonDiv">
+                    <button class="button btn  submit col-md-offset-9 col-md-2" type="button">NEXT</button>
+                  </div>
+                </div>
+                <div class="question q4 hidden">
+                  <h4>4. Self Image</h4>
+                  <h5>
+                Does he/she have problems with your self-image?
+                </h5>
+                <div class="answers">
+                  <label>
+                    <input type="radio" name="self image" value="problem" class="always" required />
+                    <img src="./assets/tick.png" />
+                  </label>
+                  <label>
+                    <input type="radio" name="self image" value="fine" class="sometimes" />
+                    <img src="./assets/cross.png" />
+                  </label>
+                </div>
+                  <div class="buttonDiv">
+                    <button class="button btn  submit col-md-offset-9 col-md-2" type="button">NEXT</button>
+                  </div>
+                </div>
+                <div class="question q5 hidden">
+                  <h4>5. Now</h4>
+                  <h5>
+                Is he/she able to cope?
+              </h5>
+              <div class="answers">
+                <label>
+                  <input type="radio" name="now" value="coping well" class="always" required />
+                  <img src="./assets/face-always.svg" />
+                </label>
+                <label>
+                  <input type="radio" name="now" value="not coping well" class="sometimes" />
+                  <img src="./assets/face-never.svg" />
+                </label>
+              </div>
+                  <div class="buttonDiv">
+                    <button class="button btn  submit col-md-offset-9 col-md-2" type="button">SUBMIT</button>
+                  </div>
+                </div>
+              </div>
+          <!-- <div class="row hidden">
+            <button class="button btn  submit col-md-offset-9 col-md-2" type="button">Submit</button>
+          </div> -->
         </div>
+      </div>
+    </form>
+  </div>
 
-        <div class="cover">
-            <ul id="qanda"></ul>
-        </div>
+  <div class="cover">
+      <ul class="qanda"></ul>
+  </div>
 
-        <script src="script.js  "></script>
-    </body>
+  <script type="text/javascript" src="script.js"></script>
+  <!-- <script type="text/javascript" src="collapse.js"></script>
+  <script type="text/javascript" src="wheel.js"></script> -->
+</body>
+
 </html>
